before feedback meeting

--- a/jupyter_notebooks/datasets_benchmark.ipynb
+++ b/jupyter_notebooks/datasets_benchmark.ipynb
@@ -284,13 +284,13 @@
     "train_x, test_x, train_y, test_y = utils.split_and_suffle(exogenous_data, y_max_u_sparse)\n",
     "data_max_u_sparse = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y)}\n",
     "\n",
-    "train_x, test_x, train_y, test_y = utils.split_and_suffle(exogenous_data, y_max_u_sparse, scaling=True)\n",
+    "train_x, test_x, train_y, test_y, scaler = utils.split_and_suffle(exogenous_data, y_max_u_sparse, scaling=True)\n",
     "data_max_u_scaled_sparse = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y)}\n",
     "\n",
     "train_x, test_x, train_y, test_y = utils.split_and_suffle(exogenous_data, y_min_u_sparse)\n",
     "data_min_u_sparse = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y)}\n",
     "\n",
-    "train_x, test_x, train_y, test_y = utils.split_and_suffle(exogenous_data, y_min_u_sparse, scaling=True)\n",
+    "train_x, test_x, train_y, test_y, scaler = utils.split_and_suffle(exogenous_data, y_min_u_sparse, scaling=True)\n",
     "data_min_u_scaled_sparse = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y)}\n"
    ]
   },
@@ -334,13 +334,13 @@
     "train_x, test_x, train_y, test_y = utils.split_and_suffle(exogenous_data, y_max_u)\n",
     "data_max_u_bool = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y)}\n",
     "\n",
-    "train_x, test_x, train_y, test_y = utils.split_and_suffle(exogenous_data, y_max_u, scaling=True)\n",
+    "train_x, test_x, train_y, test_y, scaler = utils.split_and_suffle(exogenous_data, y_max_u, scaling=True)\n",
     "data_max_u_bool_scaled = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y)}\n",
     "\n",
     "train_x, test_x, train_y, test_y = utils.split_and_suffle(exogenous_data, y_min_u)\n",
     "data_min_u_bool = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y)}\n",
     "\n",
-    "train_x, test_x, train_y, test_y = utils.split_and_suffle(exogenous_data, y_min_u, scaling=True)\n",
+    "train_x, test_x, train_y, test_y, scaler = utils.split_and_suffle(exogenous_data, y_min_u, scaling=True)\n",
     "data_min_u_bool_scaled = {'X_train': deepcopy(train_x), 'X_test': deepcopy(test_x), 'y_train': deepcopy(train_y), 'y_test': deepcopy(test_y)}"
    ]
   },
