--- a/jupyter_notebooks/focused_dataset_hyperparams_tunning.ipynb
+++ b/jupyter_notebooks/focused_dataset_hyperparams_tunning.ipynb
@@ -1017,7 +1017,7 @@
     "    # import data\n",
     "    y_max_u = pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_bal_constr.csv')\n",
     "    exogenous_data = pd.read_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_max_bal.csv').drop(columns=['date'])\n",
-    "    train_x, valid_x, train_y, valid_y = utils.split_and_suffle(exogenous_data, y_max_u, scaling=True)\n",
+    "    train_x, valid_x, train_y, valid_y, scaler = utils.split_and_suffle(exogenous_data, y_max_u, scaling=True)\n",
     "    data = {'X_train': train_x, 'X_test': valid_x, 'y_train': train_y, 'y_test': valid_y}\n",
     "    param = {\n",
     "        'kernel': trial.suggest_categorical('kernel', ['poly', 'rbf']),\n",
@@ -1186,7 +1186,7 @@
     "    # import data\n",
     "    y_min_u = pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_bal_constr.csv')\n",
     "    exogenous_data = pd.read_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_min_bal.csv').drop(columns=['date'])\n",
-    "    train_x, valid_x, train_y, valid_y = utils.split_and_suffle(exogenous_data, y_min_u, scaling=True)\n",
+    "    train_x, valid_x, train_y, valid_y, scaler = utils.split_and_suffle(exogenous_data, y_min_u, scaling=True)\n",
     "    data = {'X_train': train_x, 'X_test': valid_x, 'y_train': train_y, 'y_test': valid_y}\n",
     "    param = {\n",
     "        'kernel': trial.suggest_categorical('kernel', ['poly', 'rbf']),\n",
