second hyperparams optimization done

--- a/jupyter_notebooks/create_target_feature.ipynb
+++ b/jupyter_notebooks/create_target_feature.ipynb
@@ -187,13 +187,17 @@
    "outputs": [],
    "source": [
     "# Take a df and turn turn a cell to 1 when it is grater than 0, otherwise 0.\n",
-    "def turn_boolean(df):\n",
-    "    df = df.apply(lambda x: x.apply(lambda y: 1 if y > 0 else 0))\n",
+    "import sys; sys.path.append('..');from thesis_package import utils\n",
+    "def turn_boolean(df, threshold):\n",
+    "    df = df.apply(lambda x: x.apply(lambda y: 1 if y > threshold else 0))\n",
     "    return df\n",
-    "res_bus_vm_pu_min_bool_constr = turn_boolean(res_bus_vm_pu_min_constr)\n",
-    "res_bus_vm_pu_max_bool_constr = turn_boolean(res_bus_vm_pu_max_constr)\n",
-    "res_line_i_ka_max_bool_constr = turn_boolean(res_line_i_ka_max_constr)\n",
-    "res_line_percent_bool_constr = turn_boolean(res_line_percent_constr)"
+    "def compute_threshold(df):\n",
+    "    X_train, X_test, y_train, y_test = utils.split_and_suffle(exogenous_data, df)\n",
+    "    return y_test.loc[:, y_test.max(axis=0) != 0].max(axis=0).mean() * 0.10\n",
+    "res_bus_vm_pu_min_bool_constr = turn_boolean(res_bus_vm_pu_min_constr, compute_threshold(res_bus_vm_pu_min_constr))\n",
+    "res_bus_vm_pu_max_bool_constr = turn_boolean(res_bus_vm_pu_max_constr, compute_threshold(res_bus_vm_pu_max_constr))\n",
+    "res_line_i_ka_max_bool_constr = turn_boolean(res_line_i_ka_max_constr, compute_threshold(res_line_i_ka_max_constr))\n",
+    "res_line_percent_bool_constr = turn_boolean(res_line_percent_constr, compute_threshold(res_line_percent_constr))"
    ]
   },
   {
@@ -456,30 +460,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now we confirm that the target feature is created correctly, being in accord with the sparse dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count positives and negatives values in each bus and store it in a Series.\n",
+    "res_bus_vm_pu_min_bool_constr_count = res_bus_vm_pu_min_bool_constr\\\n",
+    "    .apply(lambda x: x.value_counts())\\\n",
+    "    .fillna(0)\n",
+    "threshold = compute_threshold(res_bus_vm_pu_min_constr)\n",
+    "res_bus_vm_pu_min_constr_count = res_bus_vm_pu_min_constr\\\n",
+    "    .apply(lambda x: x.apply(lambda y: 1 if y > threshold else 0))\\\n",
+    "    .apply(lambda x: x.value_counts())\\\n",
+    "    .fillna(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ext_grid    True\n",
+       "bus_1       True\n",
+       "bus_2       True\n",
+       "bus_3       True\n",
+       "bus_4       True\n",
+       "bus_5       True\n",
+       "bus_6       True\n",
+       "bus_7       True\n",
+       "bus_8       True\n",
+       "bus_9       True\n",
+       "bus_10      True\n",
+       "bus_11      True\n",
+       "bus_12      True\n",
+       "bus_13      True\n",
+       "bus_14      True\n",
+       "bus_15      True\n",
+       "bus_16      True\n",
+       "bus_19      True\n",
+       "bus_20      True\n",
+       "bus_22      True\n",
+       "bus_25      True\n",
+       "bus_26      True\n",
+       "bus_28      True\n",
+       "bus_29      True\n",
+       "bus_30      True\n",
+       "bus_31      True\n",
+       "bus_17      True\n",
+       "bus_21      True\n",
+       "bus_24      True\n",
+       "bus_18      True\n",
+       "bus_23      True\n",
+       "bus_27      True\n",
+       "bus_32      True\n",
+       "bus_33      True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check  = res_bus_vm_pu_min_bool_constr_count  == res_bus_vm_pu_min_constr_count\n",
+    "check.all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Create Balanced Dataset\n",
     "The balanced dataset consists only of the rows in which at least one target feature is non-zerio, that is, there is at least on constraint violation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_balanced_df(df, bool_df):\n",
+    "def get_focused_df(df, bool_df):\n",
     "    indexes = [] \n",
     "    for row in bool_df.iterrows():\n",
     "        if not row[1].any():\n",
     "            indexes.append(row[0])\n",
     "    return df.drop(indexes)\n",
-    "res_bus_vm_pu_min_bal_constr = get_balanced_df(res_bus_vm_pu_min_constr, res_bus_vm_pu_min_bool_constr)\n",
-    "exogenous_data_vm_pu_min_bal = get_balanced_df(exogenous_data, res_bus_vm_pu_min_bool_constr)\n",
-    "res_bus_vm_pu_max_bal_constr = get_balanced_df(res_bus_vm_pu_max_constr, res_bus_vm_pu_max_bool_constr)\n",
-    "exogenous_data_vm_pu_max_bal = get_balanced_df(exogenous_data, res_bus_vm_pu_max_bool_constr)\n",
-    "res_line_i_ka_max_bal_constr = get_balanced_df(res_line_i_ka_max_constr, res_line_i_ka_max_bool_constr)\n",
-    "exogenous_data_i_ka_max_bal = get_balanced_df(exogenous_data, res_line_i_ka_max_bool_constr)\n",
-    "res_line_percent_bal_constr = get_balanced_df(res_line_percent_constr, res_line_percent_bool_constr)\n",
-    "exogenous_data_percent_bal = get_balanced_df(exogenous_data, res_line_percent_bool_constr)"
+    "res_bus_vm_pu_min_bal_constr = get_focused_df(res_bus_vm_pu_min_constr, res_bus_vm_pu_min_bool_constr)\n",
+    "exogenous_data_vm_pu_min_bal = get_focused_df(exogenous_data, res_bus_vm_pu_min_bool_constr)\n",
+    "res_bus_vm_pu_max_bal_constr = get_focused_df(res_bus_vm_pu_max_constr, res_bus_vm_pu_max_bool_constr)\n",
+    "exogenous_data_vm_pu_max_bal = get_focused_df(exogenous_data, res_bus_vm_pu_max_bool_constr)\n",
+    "res_line_i_ka_max_bal_constr = get_focused_df(res_line_i_ka_max_constr, res_line_i_ka_max_bool_constr)\n",
+    "exogenous_data_i_ka_max_bal = get_focused_df(exogenous_data, res_line_i_ka_max_bool_constr)\n",
+    "res_line_percent_bal_constr = get_focused_df(res_line_percent_constr, res_line_percent_bool_constr)\n",
+    "exogenous_data_percent_bal = get_focused_df(exogenous_data, res_line_percent_bool_constr)"
    ]
   },
   {
@@ -500,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
