--- a/jupyter_notebooks/datasets_benchmark.ipynb
+++ b/jupyter_notebooks/datasets_benchmark.ipynb
@@ -1191,6 +1191,20 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO... explain why this test is not a good test, developing the following topics:\n",
+    "- The hyperparameter tunning process was not the best since in its objective function I optimized only for the TP rmse.\n",
+    "- The metrics were not the best the best to compare, since all the confusion matrices did not added up to the same Positives and Negative Values. This is due to the way the classification dataset was built wihtout using the threshold."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
