fix bug in metrics

--- a/jupyter_notebooks/create_target_feature.ipynb
+++ b/jupyter_notebooks/create_target_feature.ipynb
@@ -465,74 +465,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Count positives and negatives values in each bus and store it in a Series.\n",
-    "res_bus_vm_pu_min_bool_constr_count = res_bus_vm_pu_min_bool_constr\\\n",
-    "    .apply(lambda x: x.value_counts())\\\n",
-    "    .fillna(0)\n",
-    "threshold = compute_threshold(res_bus_vm_pu_min_constr)\n",
-    "res_bus_vm_pu_min_constr_count = res_bus_vm_pu_min_constr\\\n",
-    "    .apply(lambda x: x.apply(lambda y: 1 if y > threshold else 0))\\\n",
-    "    .apply(lambda x: x.value_counts())\\\n",
-    "    .fillna(0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22236\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "ext_grid    True\n",
-       "bus_1       True\n",
-       "bus_2       True\n",
-       "bus_3       True\n",
-       "bus_4       True\n",
-       "bus_5       True\n",
-       "bus_6       True\n",
-       "bus_7       True\n",
-       "bus_8       True\n",
-       "bus_9       True\n",
-       "bus_10      True\n",
-       "bus_11      True\n",
-       "bus_12      True\n",
-       "bus_13      True\n",
-       "bus_14      True\n",
-       "bus_15      True\n",
-       "bus_16      True\n",
-       "bus_19      True\n",
-       "bus_20      True\n",
-       "bus_22      True\n",
-       "bus_25      True\n",
-       "bus_26      True\n",
-       "bus_28      True\n",
-       "bus_29      True\n",
-       "bus_30      True\n",
-       "bus_31      True\n",
-       "bus_17      True\n",
-       "bus_21      True\n",
-       "bus_24      True\n",
-       "bus_18      True\n",
-       "bus_23      True\n",
-       "bus_27      True\n",
-       "bus_32      True\n",
-       "bus_33      True\n",
-       "dtype: bool"
+       "22236"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check  = res_bus_vm_pu_min_bool_constr_count  == res_bus_vm_pu_min_constr_count\n",
-    "check.all()"
+    "print(res_bus_vm_pu_max_constr[res_bus_vm_pu_max_constr > compute_threshold(res_bus_vm_pu_max_constr)].count().sum())\n",
+    "res_bus_vm_pu_max_bool_constr.sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35462\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "35462"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(res_bus_vm_pu_min_constr[res_bus_vm_pu_min_constr > compute_threshold(res_bus_vm_pu_min_constr)].count().sum())\n",
+    "res_bus_vm_pu_min_bool_constr.sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Same number of positives."
    ]
   },
   {
@@ -545,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
