--- a/jupyter_notebooks/sparse_focused_hyperparams_tunning_dl.ipynb
+++ b/jupyter_notebooks/sparse_focused_hyperparams_tunning_dl.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hyperparameters Tunning for Deep Learning Models\n",
+    "# Hyperparameters Tunning for Deep Learning Models (full of errors)\n",
     "TODO add description"
    ]
   },
