--- a/jupyter_notebooks/hybrid_model_ensemble_benchmark.ipynb
+++ b/jupyter_notebooks/hybrid_model_ensemble_benchmark.ipynb
@@ -34,6 +34,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "model_c, model_r \n",
+    "fow row in rows:\n",
+    "    if model_c(row):\n",
+    "        res = model_r(row)\n",
+    "    else:\n",
+    "        res = 0\n",
+    "    output.append(res)\n",
+    "output\n",
+    "\n",
+    "train: |exogenous|real_bool| -> |constraint_amplitude|\n",
+    "test: |exogenous|predict_bool| -> |predicted constraint_amplitude|"
+   ]
   }
  ],
  "metadata": {
