added compute threshold to utils

--- a/jupyter_notebooks/sparse_dataset_hyperparams_tunning.ipynb
+++ b/jupyter_notebooks/sparse_dataset_hyperparams_tunning.ipynb
@@ -973,7 +973,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[I 2022-09-24 16:15:51,251]\u001b[0m A new study created in memory with name: no-name-d595d57a-78bd-45e0-ba6b-750739d1bb53\u001b[0m\n"
+      "\u001b[32m[I 2022-09-24 16:15:51,251]\u001b[0m A new study created in memory with name: no-name-d595d57a-78bd-45e0-ba6b-750739d1bb53\u001b[0m\n",
+      "\u001b[32m[I 2022-09-24 16:23:18,393]\u001b[0m Trial 0 finished with value: 0.2546963596094271 and parameters: {'kernel': 'rbf', 'C': 0.037303449865448646, 'degree': 3, 'gamma': 0.08715482814241297}. Best is trial 0 with value: 0.2546963596094271.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of finished trials:  1\n",
+      "Best trial:\n",
+      "  Value: 0.2546963596094271\n",
+      "  Params: \n",
+      "    kernel: rbf\n",
+      "    C: 0.037303449865448646\n",
+      "    degree: 3\n",
+      "    gamma: 0.08715482814241297\n"
      ]
     }
    ],
