--- a/jupyter_notebooks/create_target_feature.ipynb
+++ b/jupyter_notebooks/create_target_feature.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -182,14 +182,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys; sys.path.append('..');from thesis_package import utils\n",
+    "import numpy as np\n",
     "def compute_threshold(df):\n",
-    "    X_train, X_test, y_train, y_test = utils.split_and_suffle(exogenous_data, df)\n",
+    "    X_train, X_test, y_train, y_test = utils.split_and_suffle(pd.DataFrame(np.ones((df.shape[0],10))), df)\n",
     "    return y_test.loc[:, y_test.max(axis=0) != 0].max(axis=0).mean() * 0.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0015910583688507286"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_threshold(res_bus_vm_pu_max_constr)"
    ]
   },
   {
@@ -202,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +255,7 @@
        "22236"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +283,7 @@
        "35462"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +333,7 @@
        "0.002024237856061223"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,28 +399,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\1085512509.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\1085512509.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\1085512509.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\1085512509.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\1085512509.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\1085512509.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\1085512509.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\1085512509.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_8176\\3363540180.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  balanced_df = balanced_df.append(zero_df.sample(n=balanced_df.shape[0], random_state=42))\n"
      ]
     }
@@ -429,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -468,15 +489,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_bus_vm_pu_min_balanced_bool_constr = turn_boolean(res_bus_vm_pu_min_constr, compute_threshold(res_bus_vm_pu_min_constr))\n",
     "res_bus_vm_pu_min_balanced_bool_constr = turn_boolean(res_bus_vm_pu_min_balanced_constr, compute_threshold(res_bus_vm_pu_min_balanced_constr))\n",
-    "res_bus_vm_pu_max_balanced_bool_constr = turn_boolean(res_bus_vm_pu_max_balanced_constr, compute_threshold(res_bus_vm_pu_max_balanced_constr))\n",
-    "res_line_i_ka_max_balanced_bool_constr = turn_boolean(res_line_i_ka_max_balanced_constr, compute_threshold(res_line_i_ka_max_balanced_constr))\n",
-    "res_line_percent_balanced_bool_constr = turn_boolean(res_line_percent_balanced_constr, compute_threshold(res_line_percent_balanced_constr))"
+    "res_bus_vm_pu_max_balanced_bool_constr = turn_boolean(res_bus_vm_pu_max_balanced_constr, compute_threshold(res_bus_vm_pu_max_balanced_constr))"
    ]
   },
   {
@@ -501,6 +519,7 @@
     "res_bus_vm_pu_min_sparse_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_sparse_bool_constr.csv', index=False)\n",
     "res_bus_vm_pu_min_focused_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_focused_constr.csv', index=False)\n",
     "res_bus_vm_pu_min_balanced_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_balanced_constr.csv', index=False)\n",
+    "res_bus_vm_pu_min_balanced_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_balanced_bool_constr.csv', index=False)\n",
     "exogenous_data_vm_pu_min_focused.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_min_focused.csv', index=False)\n",
     "exogenous_data_vm_pu_min_balanced.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_min_balanced.csv', index=False)\n",
     "# max_vm_pu\n",
@@ -512,6 +531,7 @@
     "exogenous_data_vm_pu_max_focused.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_max_focused.csv', index=False)\n",
     "res_bus_vm_pu_max_balanced_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_balanced_constr.csv', index=False)\n",
     "exogenous_data_vm_pu_max_balanced.to_csv('..\\data\\ground_truth\\\\exogenous_data_vm_pu_max_balanced.csv', index=False)\n",
+    "res_bus_vm_pu_max_balanced_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_balanced_bool_constr.csv', index=False)\n",
     "# max i_ka\n",
     "res_line_i_ka_max_constr['timestamps'] = timestamps\n",
     "res_line_i_ka_max_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_constr.csv', index=False)\n",
